refactor(amas-app): :construction: disable breadcrumbs

--- a/defaults/settings.toml
+++ b/defaults/settings.toml
@@ -16,7 +16,7 @@ line-height = 1.5
 smart-tab = true
 tab-width = 4
 show-tab = true
-show-bread-crumbs = true
+show-bread-crumbs = false
 scroll-beyond-last-line = true
 cursor-surrounding-lines = 1
 wrap-style = "editor-width"
